--- a/tsconfig.vue.json
+++ b/tsconfig.vue.json
@@ -6,7 +6,7 @@
     "lib": ["ESNext", "DOM"],
     "types": ["vite/client"]
   },
-  "include": ["play/vue/**/*.vue", "play/vue/**/*.d.ts"],
+  "include": ["play/vue/**/*.vue", "play/vue/**/*.ts", "play/vue/**/*.d.ts"],
   "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.vite.json" }]
 }
