--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yuuki-uploader-react",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "react实现的大文件分片上传器",
   "type": "module",
   "main": "./dist/yuuki-uploader.js",
@@ -20,6 +20,7 @@
     "react": "^18.2.0"
   },
   "dependencies": {
-    "spark-md5": "^3.0.2"
+    "spark-md5": "^3.0.2",
+    "yuuki-uploader-core": "workspace:^"
   }
 }
